minor title change

--- a/app/hack1/boids_threejs.html
+++ b/app/hack1/boids_threejs.html
@@ -1,3 +1,5 @@
+<!-- PMA this is the top level file -->
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -18,8 +20,17 @@
 		</style>
 	</head>
 	<body>
+		<!-- PMA in the tutorial Step 5, the code looks different, i.e.: 
+		<div class=".col-xs-12 .col-md-8">
+			<h3>Boids Three.js</h3> 
+			<hr>
+			<div id="dat_gui_container"></div> 
+			<canvas id="three_boid"></canvas>
+		</div> 
+		-->
 
 		<div id="container"></div>
+		<div id="dat_gui_container"></div>		<!-- //PMA Step 5 added -->
 		<canvas id="three_boid"></canvas>
 
 		<!-- Other Libs -->
