--- a/app/hack1/particles_threejs.html
+++ b/app/hack1/particles_threejs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Three.js Boids</title>
+		<title>Three.js Particles</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -20,7 +20,7 @@
 	<body>
 
 		<div id="container"></div>
-		<canvas id="three_boid"></canvas>
+		<canvas id="three_particle"></canvas>
 
 		<!-- Other Libs -->
 		<script src="assets/js/controls/dat.gui.min.js"></script>
@@ -32,11 +32,11 @@
 		<script src="assets/js/renderers/CanvasRenderer.js"></script>
 		<script src="assets/js/controls/OrbitControls.js"></script>
 
-		<!-- Physics - Boid -->
-		<script src="assets/js/physics/physics_boid.js"></script>
+		<!-- Physics - Particle -->
+		<script src="assets/js/physics/physics_particle.js"></script>
 
-		<!-- Render - Boid -->
-		<script src="assets/js/renderers/render_three_boid.js"></script>
+		<!-- Render - Particle -->
+		<script src="assets/js/renderers/render_three_particle.js"></script>
 		
 	</body>
 </html>
