--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         <link href="app/assets/css/three_particle.css" rel="stylesheet">
 
 		<!-- brething particles -->
-        <link href="app/assets/css/breathing.css" rel="stylesheet">
+        <!--PMA <link href="app/assets/css/breathing.css" rel="stylesheet"> -->
 
 </head>
 	
@@ -65,7 +65,7 @@
 
 					<!-- begin header -->
 					<div class=".col-xs-12 .col-md-8">
-						<h1>Your Name Here</h1>
+						<h1>My Name There</h1>
 						<h4><a href='http://web.stanford.edu/~dderiso/cme151/' target='_blank'>CME 151: Data Visualization</a> <small>Winter 2015</small></h4>
 						<hr>
 					</div>
