--- a/app/index.html
+++ b/app/index.html
@@ -13,13 +13,13 @@
 		<![endif]-->
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-		<link href="/app/assets/css/style.css" rel="stylesheet">
+		<link href="assets/css/style.css" rel="stylesheet">
 
 		<!-- threejs particle simulation -->
-        <link href="/app/assets/css/three_particle.css" rel="stylesheet">
+        <link href="assets/css/three_particle.css" rel="stylesheet">
 
-		<!-- brething particles -->
-        <!--PMA <link href="assets/css/breathing.css" rel="stylesheet"> -->
+		<!-- breathing particles -->
+        <link href="assets/css/breathing.css" rel="stylesheet">
 
 </head>
 	
