--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 		<!-- threejs particle simulation -->
         <link href="assets/css/three_particle.css" rel="stylesheet">
 
-		<!-- breathing particles -->
+		<!-- breathing particles ... this does not seem to do anything... -->
         <link href="assets/css/breathing.css" rel="stylesheet">
 
 </head>
@@ -73,8 +73,8 @@
 
 					<!-- begin viz 1 -->
 					<div class=".col-xs-12 .col-md-8">
-						<h3>Visualization on ABC</h3>
-						<p>In this visualization, I wanted to just get SOMETHING to work </p>
+						<h3>Visualization using THREE.js</h3>
+						<p>In this visualization, I wanted to simulate Orbital Mechanics </p>
 						<!--PMA <canvas id="viz_1"></canvas> -->
 						<div id="three_particle_container">
 							<canvas id="three_particle"></canvas>
@@ -86,7 +86,7 @@
 
 					<!-- begin viz 2 -->
 					<div class=".col-xs-12 .col-md-8">
-						<h3>Visualization on XYZ</h3>
+						<h3>2D-particle simulation</h3>
 						<p>In this visualization, I wanted to show something organic-seeming. </p>
 						<!--PMA <canvas id="viz_2"></canvas> -->
 						<div id="breath of life">
