bored with this

--- a/app/boids/boids_threejs.html
+++ b/app/boids/boids_threejs.html
@@ -19,8 +19,16 @@
 	</head>
 	<body>
 
-		<div id="container"></div>
-		<canvas id="three_boid"></canvas>
+		<div id="container">
+		</div>
+		<!-- PMA step 5 -->
+		<div class=".col-xs-12 .col-md-8">
+			<h3>Boids Three.js></h3>
+			<hr>
+			<div id="dat_gui_container">
+			</div>
+			<canvas id="three_boid"></canvas>
+		 </div>
 
 		<!-- Other Libs -->
 		<script src="assets/js/controls/dat.gui.min.js"></script>
