--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,18 @@
 					</div>
 					<!-- end viz 2 -->
 
+
+					<!-- begin viz 3 -->
+					<div class=".col-xs-12 .col-md-8">
+						<h3>Nyeeeh, it's fuh da Boids, Doc!</h3>
+						<p>In this visualization, I wanted to impress Deirdre with my INSANE slavish-direction-following skill(z). </p>
+						<div id="boids div">
+							<div id="dat_gui_container">
+							</div>							
+							<canvas id="three_boid"></canvas>
+					</div>
+					<!-- end viz 3 -->
+
 				</div>
 				<!-- end row -->
 
@@ -129,5 +141,16 @@
     <script src='assets/js/three_particle.js'></script>
     <script src='assets/js/breathing.js'></script>
 
+	<!-- Renderer -->
+	<script src="assets/js/renderers/three.min.js"></script>
+	<script src="assets/js/renderers/Projector.js"></script>
+	<script src="assets/js/renderers/CanvasRenderer.js"></script>
+	<script src="assets/js/controls/OrbitControls.js"></script>
+
+	<!-- Physics - Boid -->
+	<script src="assets/js/physics/physics_boid.js"></script>
+
+	<!-- Render - Boid -->
+	<script src="assets/js/renderers/render_three_boid.js"></script>
 </body>
 </html>
