--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <link href="assets/css/three_particle.css" rel="stylesheet">
 
 		<!-- breathing particles ... this does not seem to do anything... -->
-        <link href="assets/css/breathing.css" rel="stylesheet">
+        <!-- <link href="assets/css/breathing.css" rel="stylesheet"> -->
 
 </head>
 	
