color sets (no heart yet)

--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,7 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="assets/css/style.css" rel="stylesheet">
-
-		<!-- threejs particle simulation -->
         <link href="assets/css/three_particle.css" rel="stylesheet">
-
-		<!-- breathing particles ... this does not seem to do anything... -->
-        <!-- <link href="assets/css/breathing.css" rel="stylesheet"> -->
 
 </head>
 	
@@ -49,6 +44,7 @@
 						<div id="valencia-div">
 							<canvas id="valencia"></canvas>
 						</div>						
+						<p>click for different colours</p>
 						<hr>
 					</div>
 					<!-- end viz 2 -->
